add cd command functionality